# scrum-master-backend

./: .dockerignore  .env.example  .gitignore  BOT_STATUS_POLLING_GUIDE.md  INTEGRATION_GUIDE.md  Makefile  alembic.ini  debug_di.py  docker-compose.yaml  pyproject.toml  test_bot_direct.py  test_di.py  test_grooming_payload.json  test_router.py  verify_jira_di.py
docker/: Dockerfile  Dockerfile.dev  entrypoint.sh
scripts/: reset-db.sh
scrum_master/: ioc.py  main.py
scrum_master/agents/meet_agent/: app.py
scrum_master/agents/meet_agent/agent/: agent.py  prompts.py
scrum_master/agents/meet_agent/api/: routes.py
scrum_master/agents/meet_agent/core/: agent_schemas.py  config.py  ioc.py  schemas.py
scrum_master/agents/meet_agent/services/: agent_service.py  file_service.py  notion_service.py  telegram_service.py
scrum_master/agents/meet_agent/tools/: jira_tool.py  notion_tool.py  telegram_tool.py  transcribe_tool.py
scrum_master/modules/auth/: config.py  ioc.py
scrum_master/modules/auth/application/: interfaces.py
scrum_master/modules/auth/application/dtos/: __init__.py
scrum_master/modules/auth/application/interactors/: get_github_token.py  get_user.py  github_oauth_login.py  google_oauth_login.py  (+2 more)
scrum_master/modules/auth/domain/: __init__.py  entities.py
scrum_master/modules/auth/infrastructure/: logging.py
scrum_master/modules/google_meet/: HOW_IT_WORKS.md  README.md  config.py  ioc.py
scrum_master/modules/google_meet/application/: interfaces.py
scrum_master/modules/google_meet/domain/: entities.py
scrum_master/modules/google_meet/infrastructure/: bot_status_storage.py  bot_status_sync.py
scrum_master/modules/jira/: api.py  ioc.py  models.py  router.py  service.py
scrum_master/shared/auth/: __init__.py  jwt_service.py  middleware.py
scrum_master/shared/config/: __init__.py  base.py  settings.py
scrum_master/shared/exceptions/: auth.py
scrum_master/shared/ioc/: __init__.py  a1b2c3d4e5f6_add_meetings_table.py  providers.py
scrum_master/shared/persistence/sqlalchemy/: database.py
scrum_master/utils/: pydantic_fix.py
(+37 files in other folders)
